--- a/style.css
+++ b/style.css
@@ -334,3 +334,12 @@ button:hover { background: #5568d3; }
         font-size: 16px;
     }
 }
+
+#tsparticles {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
