--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ button:hover { background: #5568d3; }
     align-items: center;
     justify-content: center;
 }
-.yarn-ball-legend, .litter-box-legend { 
+.litter-box-legend { 
     width: 30px; 
     height: 30px; 
 }
